support to update cert-key list in TcpLb
